update NPCs: ADAK, Levelup Dhorn Naeressa Siannan

--- a/mod/utc/siannan.utc.yml
+++ b/mod/utc/siannan.utc.yml
@@ -22,34 +22,35 @@ BodyPart_RShin: {type: :byte, value: 1}
 BodyPart_RShoul: {type: :byte, value: 0}
 BodyPart_RThigh: {type: :byte, value: 1}
 BodyPart_Torso: {type: :byte, value: 1}
-CRAdjust: {type: :int, value: 0}
+CRAdjust: {type: :int, value: 1}
 Cha: {type: :byte, value: 14}
-ChallengeRating: {type: :float, value: 1.0}
+ChallengeRating: {type: :float, value: 8.0}
 ClassList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ClassList
     __struct_id: 2
     Class: {type: :int, value: 10}
-    ClassLevel: {type: :short, value: 1}
+    ClassLevel: {type: :short, value: 8}
     MemorizedList0: 
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
         __struct_id: 3
         Spell: {type: :word, value: 37}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
         __struct_id: 3
         Spell: {type: :word, value: 100}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
+        __struct_id: 3
+        Spell: {type: :word, value: 144}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         Spell: {type: :word, value: 807}
         SpellFlags: {type: :byte, value: 1}
@@ -58,15 +59,92 @@ ClassList:
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
         __struct_id: 3
         Spell: {type: :word, value: 86}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
         __struct_id: 3
-        Spell: {type: :word, value: 165}
+        Spell: {type: :word, value: 102}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 107}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 107}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 107}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+    MemorizedList2: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 120}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 90}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 115}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 192}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+    MemorizedList3: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 41}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 59}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 83}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 188}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+    MemorizedList4: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 88}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 447}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 172}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
 Color_Hair: {type: :byte, value: 8}
@@ -76,38 +154,46 @@ Color_Tattoo2: {type: :byte, value: 1}
 Comment: {type: :cexostr, value: ""}
 Con: {type: :byte, value: 10}
 Conversation: {type: :resref, value: ""}
-CurrentHitPoints: {type: :short, value: 4}
+CurrentHitPoints: {type: :short, value: 32}
 DecayTime: {type: :dword, value: 5000}
-Deity: {type: :cexostr, value: Azuth}
+Deity: {type: :cexostr, value: Mystra}
 Description: 
   type: :cexolocstr
   value: 
-    0: "Eine h\xFCbsche, h\xF6chstens zwanzig Winter z\xE4hlende Nordl\xE4nderin. Sie wirkt eher zierlich gebaut, und sucht man ihren Blick wird sie meisten verlegen l\xE4chelnd wegblicken und etwas vor sich her nuscheln.\n\n\
+    0: "Eine h\xFCbsche, vielleicht 25 Winter z\xE4hlende Nordl\xE4nderin. Sie wirkt eher zierlich gebaut, und sucht man ihren Blick wird sie meisten verlegen l\xE4chelnd wegblicken und etwas vor sich her nuscheln.\n\n\
       Meistens sieht man sie in oder um die Akademie im S\xFCdwesten der Gabel, und oft ist sie mit einem oder mehreren Pergamenten und B\xFCchern besch\xE4ftigt."
 Dex: {type: :byte, value: 14}
 Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: cloth_bachelor}}
-FactionID: {type: :word, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 2, EquippedRes: {type: :resref, value: cloth_bachelor}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 4, EquippedRes: {type: :resref, value: kld_stiefel1}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 128, EquippedRes: {type: :resref, value: jewel_ringsilber}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 256, EquippedRes: {type: :resref, value: jewel_ringkupfer}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 512, EquippedRes: {type: :resref, value: kette_mystra}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1024, EquippedRes: {type: :resref, value: kld_guertel1}}
+FactionID: {type: :word, value: 17}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 189}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 258}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 945}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 51}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 303}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 167}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 258}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 945}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 180}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 189}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 166}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 168}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 170}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 303}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 51}}
 FirstName: 
   type: :cexolocstr
   value: 
     0: Siannan
 Gender: {type: :byte, value: 1}
 GoodEvil: {type: :byte, value: 100}
-HitPoints: {type: :short, value: 4}
-Int: {type: :byte, value: 16}
+HitPoints: {type: :short, value: 32}
+Int: {type: :byte, value: 18}
 Interruptable: {type: :byte, value: 1}
 IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
@@ -115,28 +201,19 @@ ItemList:
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
     __struct_id: 0
-    InventoryRes: {type: :resref, value: nw_it_mpotion001}
+    InventoryRes: {type: :resref, value: nw_wswdg001}
     Repos_PosX: {type: :word, value: 0}
     Repos_Posy: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
     __struct_id: 1
-    InventoryRes: {type: :resref, value: nw_it_sparscr102}
+    InventoryRes: {type: :resref, value: nw_it_mpotion002}
     Repos_PosX: {type: :word, value: 1}
     Repos_Posy: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
     __struct_id: 2
-    InventoryRes: {type: :resref, value: nw_it_sparscr108}
+    InventoryRes: {type: :resref, value: wand_lightnin_5}
     Repos_PosX: {type: :word, value: 2}
-    Repos_Posy: {type: :word, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
-    __struct_id: 3
-    InventoryRes: {type: :resref, value: nw_wswdg001}
-    Repos_PosX: {type: :word, value: 3}
     Repos_Posy: {type: :word, value: 0}
 LastName: 
   type: :cexolocstr
@@ -144,7 +221,7 @@ LastName:
     0: Nordwind
 LawfulChaotic: {type: :byte, value: 50}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 4}
+MaxHitPoints: {type: :short, value: 32}
 NaturalAC: {type: :byte, value: 0}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 44}
@@ -169,34 +246,34 @@ ScriptUserDefine: {type: :resref, value: x2_def_userdef}
 SkillList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
 SoundSetFile: {type: :word, value: 151}
 SpecAbilityList: 
   type: :list
