--- a/mod/utc/dhorn.utc.yml
+++ b/mod/utc/dhorn.utc.yml
@@ -22,51 +22,129 @@ BodyPart_RShin: {type: :byte, value: 1}
 BodyPart_RShoul: {type: :byte, value: 0}
 BodyPart_RThigh: {type: :byte, value: 1}
 BodyPart_Torso: {type: :byte, value: 1}
-CRAdjust: {type: :int, value: 0}
+CRAdjust: {type: :int, value: 1}
 Cha: {type: :byte, value: 10}
-ChallengeRating: {type: :float, value: 1.0}
+ChallengeRating: {type: :float, value: 8.0}
 ClassList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ClassList
     __struct_id: 2
     Class: {type: :int, value: 10}
-    ClassLevel: {type: :short, value: 1}
+    ClassLevel: {type: :short, value: 8}
     MemorizedList0: 
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
         __struct_id: 3
         Spell: {type: :word, value: 37}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
+        __struct_id: 3
+        Spell: {type: :word, value: 100}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         Spell: {type: :word, value: 144}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
         __struct_id: 3
-        Spell: {type: :word, value: 100}
+        Spell: {type: :word, value: 151}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
     MemorizedList1: 
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
+        __struct_id: 3
+        Spell: {type: :word, value: 543}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 543}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         Spell: {type: :word, value: 102}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
         __struct_id: 3
-        Spell: {type: :word, value: 174}
+        Spell: {type: :word, value: 107}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 107}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+    MemorizedList2: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 49}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 120}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 90}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 115}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+    MemorizedList3: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 58}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 78}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 166}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 171}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+    MemorizedList4: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 375}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 368}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 172}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
 Color_Hair: {type: :byte, value: 23}
@@ -76,13 +154,13 @@ Color_Tattoo2: {type: :byte, value: 1}
 Comment: {type: :cexostr, value: ""}
 Con: {type: :byte, value: 14}
 Conversation: {type: :resref, value: dhorn}
-CurrentHitPoints: {type: :short, value: 4}
+CurrentHitPoints: {type: :short, value: 32}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: Gond}
 Description: 
   type: :cexolocstr
   value: 
-    0: "Ein grossgewachsener junger Mann von vielleicht zwanzig Jahren.\n\
+    0: "Ein grossgewachsener junger Mann von vielleicht 25 Jahren.\n\
       Das sonnengebr\xE4unte Gesicht wird von kurzgeschorenen schwarzen haaren eingerahmt, und braune Augen blicken aufmerksam daraus hervor.\n\n\
       Man sieht ihm wohl an dass er zuweilen auch k\xF6rperliche Arbeit verrichtet. Manch einer mag ihn als Dhorn Houxler erkennen, den Sohn des Schmiedes."
 Dex: {type: :byte, value: 12}
@@ -90,25 +168,28 @@ Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: cloth_bachelor}}
-FactionID: {type: :word, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 2, EquippedRes: {type: :resref, value: cloth_bachelor}}
+FactionID: {type: :word, value: 17}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 258}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 945}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 384}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 51}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 303}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 172}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 944}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 946}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 400}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 258}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 945}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 384}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 172}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 303}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 51}}
 FirstName: 
   type: :cexolocstr
   value: 
     0: Dhorn
 Gender: {type: :byte, value: 0}
 GoodEvil: {type: :byte, value: 50}
-HitPoints: {type: :short, value: 4}
-Int: {type: :byte, value: 16}
+HitPoints: {type: :short, value: 32}
+Int: {type: :byte, value: 18}
 Interruptable: {type: :byte, value: 1}
 IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
@@ -116,28 +197,19 @@ ItemList:
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
     __struct_id: 0
-    InventoryRes: {type: :resref, value: nw_it_mpotion001}
+    InventoryRes: {type: :resref, value: dolch}
     Repos_PosX: {type: :word, value: 0}
     Repos_Posy: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
     __struct_id: 1
-    InventoryRes: {type: :resref, value: nw_it_sparscr102}
+    InventoryRes: {type: :resref, value: nw_it_mpotion002}
     Repos_PosX: {type: :word, value: 1}
     Repos_Posy: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
     __struct_id: 2
-    InventoryRes: {type: :resref, value: nw_it_sparscr108}
+    InventoryRes: {type: :resref, value: wand_missile_9}
     Repos_PosX: {type: :word, value: 2}
-    Repos_Posy: {type: :word, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
-    __struct_id: 3
-    InventoryRes: {type: :resref, value: nw_wswdg001}
-    Repos_PosX: {type: :word, value: 3}
     Repos_Posy: {type: :word, value: 0}
 LastName: 
   type: :cexolocstr
@@ -145,7 +217,7 @@ LastName:
     0: Houxler
 LawfulChaotic: {type: :byte, value: 100}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 6}
+MaxHitPoints: {type: :short, value: 48}
 NaturalAC: {type: :byte, value: 0}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 44}
@@ -170,34 +242,34 @@ ScriptUserDefine: {type: :resref, value: x2_def_userdef}
 SkillList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 11}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
 SoundSetFile: {type: :word, value: 131}
 SpecAbilityList: 
   type: :list
