--- a/mod/utc/naeressa.utc.yml
+++ b/mod/utc/naeressa.utc.yml
@@ -22,40 +22,35 @@ BodyPart_RShin: {type: :byte, value: 1}
 BodyPart_RShoul: {type: :byte, value: 0}
 BodyPart_RThigh: {type: :byte, value: 1}
 BodyPart_Torso: {type: :byte, value: 1}
-CRAdjust: {type: :int, value: 0}
+CRAdjust: {type: :int, value: 1}
 Cha: {type: :byte, value: 12}
-ChallengeRating: {type: :float, value: 8.0}
+ChallengeRating: {type: :float, value: 11.0}
 ClassList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ClassList
     __struct_id: 2
     Class: {type: :int, value: 10}
-    ClassLevel: {type: :short, value: 9}
+    ClassLevel: {type: :short, value: 11}
     MemorizedList0: 
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
         __struct_id: 3
         Spell: {type: :word, value: 37}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
-        __struct_id: 3
-        Spell: {type: :word, value: 144}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
         __struct_id: 3
         Spell: {type: :word, value: 100}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList0
+        __struct_id: 3
+        Spell: {type: :word, value: 144}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         Spell: {type: :word, value: 151}
         SpellFlags: {type: :byte, value: 1}
@@ -64,31 +59,26 @@ ClassList:
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
         __struct_id: 3
-        Spell: {type: :word, value: 86}
+        Spell: {type: :word, value: 543}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
         __struct_id: 3
         Spell: {type: :word, value: 102}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
         __struct_id: 3
         Spell: {type: :word, value: 107}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
         __struct_id: 3
-        Spell: {type: :word, value: 174}
+        Spell: {type: :word, value: 107}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
         __struct_id: 3
         Spell: {type: :word, value: 165}
         SpellFlags: {type: :byte, value: 1}
@@ -97,79 +87,77 @@ ClassList:
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList2
         __struct_id: 3
         Spell: {type: :word, value: 518}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList2
         __struct_id: 3
         Spell: {type: :word, value: 120}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList2
+        __struct_id: 3
+        Spell: {type: :word, value: 90}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         Spell: {type: :word, value: 93}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList2
         __struct_id: 3
         Spell: {type: :word, value: 115}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList2
-        __struct_id: 3
-        Spell: {type: :word, value: 90}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
     MemorizedList3: 
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList3
+        __struct_id: 3
+        Spell: {type: :word, value: 21}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 41}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         Spell: {type: :word, value: 58}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList3
-        __struct_id: 3
-        Spell: {type: :word, value: 78}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList3
         __struct_id: 3
         Spell: {type: :word, value: 545}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList3
         __struct_id: 3
-        Spell: {type: :word, value: 41}
+        Spell: {type: :word, value: 78}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
     MemorizedList4: 
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList4
         __struct_id: 3
         Spell: {type: :word, value: 47}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList4
         __struct_id: 3
         Spell: {type: :word, value: 375}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList4
+        __struct_id: 3
+        Spell: {type: :word, value: 368}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         Spell: {type: :word, value: 172}
         SpellFlags: {type: :byte, value: 1}
@@ -178,9 +166,21 @@ ClassList:
       type: :list
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList5
         __struct_id: 3
-        Spell: {type: :word, value: 99}
+        Spell: {type: :word, value: 440}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 82}
+        SpellFlags: {type: :byte, value: 1}
+        SpellMetaMagic: {type: :byte, value: 0}
+    MemorizedList6: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        Spell: {type: :word, value: 448}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
 Color_Hair: {type: :byte, value: 16}
@@ -190,7 +190,7 @@ Color_Tattoo2: {type: :byte, value: 1}
 Comment: {type: :cexostr, value: ""}
 Con: {type: :byte, value: 10}
 Conversation: {type: :resref, value: ""}
-CurrentHitPoints: {type: :short, value: 36}
+CurrentHitPoints: {type: :short, value: 44}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: Azuth}
 Description: 
@@ -202,35 +202,36 @@ Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: cloth_grandtutor}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 512, EquippedRes: {type: :resref, value: nw_it_mneck022}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 8192, EquippedRes: {type: :resref, value: nw_wambo001}}
-FactionID: {type: :word, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 2, EquippedRes: {type: :resref, value: cloth_grandtutor}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 512, EquippedRes: {type: :resref, value: nw_it_mneck022}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8192, EquippedRes: {type: :resref, value: nw_wambo001}}
+FactionID: {type: :word, value: 17}
 FeatList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 354}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 246}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 244}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 245}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 180}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 189}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 235}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 945}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 51}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 303}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 236}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 12}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 170}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 168}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 944}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 12}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 236}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 235}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 354}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 244}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 245}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 246}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 945}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 180}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 189}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 168}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 170}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 303}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 51}}
 FirstName: 
   type: :cexolocstr
   value: 
     0: Naeressa
 Gender: {type: :byte, value: 1}
 GoodEvil: {type: :byte, value: 50}
-HitPoints: {type: :short, value: 36}
-Int: {type: :byte, value: 18}
+HitPoints: {type: :short, value: 44}
+Int: {type: :byte, value: 19}
 Interruptable: {type: :byte, value: 0}
 IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
@@ -238,25 +239,21 @@ ItemList:
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
     __struct_id: 0
     InventoryRes: {type: :resref, value: nw_wswdg001}
     Repos_PosX: {type: :word, value: 0}
     Repos_Posy: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
     __struct_id: 1
     InventoryRes: {type: :resref, value: wand_lightnin_10}
     Repos_PosX: {type: :word, value: 1}
     Repos_Posy: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
     __struct_id: 2
     InventoryRes: {type: :resref, value: wand_bhands_5}
     Repos_PosX: {type: :word, value: 2}
     Repos_Posy: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
     __struct_id: 3
     InventoryRes: {type: :resref, value: wand_missile_9}
     Repos_PosX: {type: :word, value: 3}
@@ -267,7 +264,7 @@ LastName:
     0: Silithlass
 LawfulChaotic: {type: :byte, value: 100}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 36}
+MaxHitPoints: {type: :short, value: 44}
 NaturalAC: {type: :byte, value: 0}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 42}
@@ -292,41 +289,41 @@ ScriptUserDefine: {type: :resref, value: x2_def_userdef}
 SkillList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 12}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 12}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 12}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 12}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 12}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 14}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
 SoundSetFile: {type: :word, value: 194}
 SpecAbilityList: 
   type: :list
   value: []
 
 StartingPackage: {type: :byte, value: 10}
-Str: {type: :byte, value: 9}
+Str: {type: :byte, value: 8}
 Subrace: {type: :cexostr, value: ""}
 Tag: {type: :cexostr, value: Naeressa}
 Tail_New: {type: :dword, value: 0}
