Gabel Caelina: add wanderclose to all cats #253

--- a/mod/area/gabel_caelinaeg.git.yml
+++ b/mod/area/gabel_caelinaeg.git.yml
@@ -135,6 +135,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
+    VarTable: 
+      type: :list
+      value: &id001 
+        - !nwn-lib.elv.es,2008-12/struct 
+          __struct_id: 0
+          Name: {type: :cexostr, value: wanderclose}
+          Type: {type: :dword, value: 1}
+          Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -264,6 +272,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -393,6 +404,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -522,6 +536,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bw}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -651,6 +668,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bw}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -780,6 +800,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bw}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -909,6 +932,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_white}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1038,6 +1064,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_white}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1167,6 +1196,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_white}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1296,6 +1328,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_white}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1315,7 +1350,7 @@ Door List:
     AnimationState: {type: :byte, value: 1}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
@@ -2283,7 +2318,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1342}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2661,7 +2696,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1342}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2724,7 +2759,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1342}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2787,7 +2822,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1342}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3634,7 +3669,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1329}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3697,7 +3732,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1329}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3760,7 +3795,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1328}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4894,7 +4929,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 351}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -5092,30 +5127,5 @@ TriggerList:
 
 WaypointList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 3}
-    Description: 
-      type: :cexolocstr
-      value: {}
+  value: []
 
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 69063
-      value: {}
-
-    MapNote: 
-      type: :cexolocstr
-      value: {}
-
-    MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: NW_HOME}
-    TemplateResRef: {type: :resref, value: nw_wp_home}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 16.8026}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 4.3855}
-    ZPosition: {type: :float, value: 0.01}
