--- a/mod/area/gabel_caelinaog.git.yml
+++ b/mod/area/gabel_caelinaog.git.yml
@@ -135,6 +135,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_bw}
+    VarTable: 
+      type: :list
+      value: &id001 
+        - !nwn-lib.elv.es,2008-12/struct 
+          __struct_id: 0
+          Name: {type: :cexostr, value: wanderclose}
+          Type: {type: :dword, value: 1}
+          Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -264,6 +272,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_bw}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -393,6 +404,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_bw}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -522,6 +536,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -651,6 +668,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -780,6 +800,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bob}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -909,6 +932,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_white}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1038,6 +1064,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_white}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1167,6 +1196,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_white}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1296,6 +1328,9 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_white}
+    VarTable: 
+      type: :list
+      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -5362,7 +5397,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1328}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -5744,7 +5779,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1381}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -6061,7 +6096,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1453}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7526,7 +7561,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1328}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7589,7 +7624,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 30}
     Conversation: {type: :resref, value: ""}
@@ -7717,7 +7752,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1347}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7780,7 +7815,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1345}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -8036,7 +8071,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 351}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -8162,7 +8197,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 351}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -8234,30 +8269,5 @@ TriggerList:
 
 WaypointList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 3}
-    Description: 
-      type: :cexolocstr
-      value: {}
+  value: []
 
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 69063
-      value: {}
-
-    MapNote: 
-      type: :cexolocstr
-      value: {}
-
-    MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: NW_HOME}
-    TemplateResRef: {type: :resref, value: nw_wp_home}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 13.6628}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 5.748}
-    ZPosition: {type: :float, value: 0.01}
