Gabel Lampen: rename to be owned by Callisto

--- a/mod/area/gabel_lampen.are.yml
+++ b/mod/area/gabel_lampen.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 0}
 Name: 
   type: :cexolocstr
   value: 
-    0: An der Gabel - Wunderlich-leuchtende magische Lampenwelt
+    0: An der Gabel - Callistos charismatisch-charmante wunderlich-leuchtende magische Lampenwelt
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_inside}
 OnExit: {type: :resref, value: _area_leave}
